updates to api banner and header

--- a/_includes/_new/_page-components/_header-main.html
+++ b/_includes/_new/_page-components/_header-main.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="https://plot.ly/feed/" target="_blank"><span class="--item">Feed</span></a></li>
                     <li><a href="https://plot.ly/products/cloud/" target="_blank"><span class="--item">Pricing</span></a></li>
-                    <li><a href="http://dashboards.ly/" target="_blank"><span class="--item">Dashboards</span></a></li>
+                    <li><a href="https://plot.ly/alpha/workspace/" target="_blank"><span class="--item">Make a Chart</span></a></li>
                     <li><a href="https://plot.ly/api/" onmouseover="dropDownMenu('api-menu')" onmouseout="hideDropDownMenu('api-menu')" target="_self"><span class="--item">API
                     <div class="icon">
                         <svg style="width:24px;height:24px" viewbox="0 0 24 24"></svg>
@@ -52,7 +52,7 @@
                 <ul>
                     <li><a href="https://plot.ly/feed/" target="_blank"><span class="--item">Feed</span></a></li>
                     <li><a href="https://plot.ly/products/cloud/" target="_blank"><span class="--item">Pricing</span></a></li>
-                    <li><a href="http://dashboards.ly/" target="_blank"><span class="--item">Dashboards</span></a></li>
+                    <li><a href="https://plot.ly/alpha/workspace/" target="_blank"><span class="--item">Make a Chart</span></a></li>
                     <li><a href="https://plot.ly/api/" onmouseover="dropDownMenu('api-menu')" onmouseout="hideDropDownMenu('api-menu')" target="_self"><span class="--item">API
                     <div class="icon">
                         <svg style="width:24px;height:24px" viewbox="0 0 24 24"></svg>
