--- a/_includes/lang-splash-banner.html
+++ b/_includes/lang-splash-banner.html
@@ -1,5 +1,7 @@
 <div class="header-large--wrap">
     <div class="header--blue-bg">
+
+
         <div class="--image"></div>
         <div class="header--meta-content">
             {% if page.language == "plotly_js" %}
@@ -61,8 +63,51 @@
                         frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
                 {% endif %}
             </div>
+            <!--<script async type="text/javascript"-->
+            <!--src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=plotly"-->
+            <!--id="_carbonads_js"></script>-->
 
-            <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=plotly" id="_carbonads_js"></script>
+            <div id="carbonads" class="upgrade">
+            <span>
+            <span class="carbon-wrap">
+                          <a href="https://plot.ly/settings/subscription/?modal=true&utm_source=api-banner" target="_blank"
+                             class="upgrade--wrap">
+                              <div class="upgrade--header">
+                                  Upgrade to Plotly Pro Today!
+                              </div>
+                              <ul class="columns--three">
+                                  <li class="upgrade--item image">
+                                      <img src="https://s3-us-west-1.amazonaws.com/plotly-tutorials/plotly-documentation/images/tri-trans.png" alt="">
+                                  </li>
+                                  <li class="upgrade--item">
+                                      <div class="header">
+                                          Support Open Source.
+                                      </div>
+                                      <div class="body">
+                                          These libraries are free forever. Your Pro plan keeps them top notch.
+                                      </div>
+                                  </li>
+                                  <li class="upgrade--item">
+                                      <div class="header">
+                                          Online Editor.
+                                      </div>
+                                      <div class="body">
+                                          Build charts in a breeze with our online editor.
+                                      </div>
+                                  </li>
+                                  <li class="upgrade--item">
+                                      <div class="header">
+                                          Real-time Support.
+                                      </div>
+                                      <div class="body">
+                                          Get instant chat support from our awesome engineering team.
+                                      </div>
+                                  </li>
+                              </ul>
+                          </a>
+            </span>
+          </span>
+            </div>
         </div>
     </div>
 </div>
