--- a/all_static/css/main.css
+++ b/all_static/css/main.css
@@ -624,7 +624,7 @@ header.header-main {
           header.header-main .\--wrap .\-identity div.logo svg rect {
             fill: currentColor; }
     header.header-main .\--wrap nav {
-      font-size: 1.2rem; }
+      font-size: 1.1rem; }
       header.header-main .\--wrap nav ul {
         list-style-type: none;
         display: -webkit-box;
@@ -8470,3 +8470,120 @@ pre, code, .hljs {
 
 .\--tutorial-section.no-image .\--item-meta {
   padding: 0; }
+
+.\--page {
+  position: relative;
+  z-index: 3;
+  background: white; }
+
+.upgrade#carbonads {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto; }
+  @media (max-width: 584px) {
+    .upgrade#carbonads {
+      margin: 0 !important;
+      padding: 0 !important; } }
+
+.upgrade span {
+  display: block; }
+
+.upgrade .carbon-wrap {
+  display: block; }
+
+.upgrade--cta {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background: rgba(68, 123, 220, 0.5);
+  border-top: 1px solid #447bdc;
+  position: absolute;
+  width: 100vw;
+  left: 0;
+  z-index: 5;
+  min-height: 160px;
+  bottom: 0; }
+  .upgrade--cta:hover {
+    background: rgba(68, 123, 220, 0.8); }
+
+.upgrade--header {
+  font-size: 1.5rem;
+  text-align: center;
+  padding-bottom: 20px;
+  color: #9AD1FD; }
+  @media (max-width: 1023px) {
+    .upgrade--header {
+      padding-bottom: 0;
+      padding: 0 10px;
+      text-align: center;
+      width: 100%; } }
+
+.upgrade--wrap {
+  padding: 20px;
+  opacity: 1 !important;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  font-size: 1rem;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  max-width: 1120px;
+  padding: 0;
+  width: 100%;
+  margin: 0 auto; }
+  @media (min-width: 1024px) {
+    .upgrade--wrap {
+      padding-top: 20px;
+      padding-bottom: 10px; } }
+  .upgrade--wrap:hover {
+    text-decoration: none !important; }
+    .upgrade--wrap:hover .header {
+      color: white !important; }
+    .upgrade--wrap:hover .body {
+      color: white; }
+    .upgrade--wrap:hover .upgrade--header {
+      color: white; }
+  .upgrade--wrap .columns--three {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+    @media (max-width: 1023px) {
+      .upgrade--wrap .columns--three {
+        display: none; } }
+    .upgrade--wrap .columns--three li {
+      text-align: center; }
+      .upgrade--wrap .columns--three li.image {
+        max-width: 180px;
+        width: 180px;
+        margin-right: 20px; }
+        .upgrade--wrap .columns--three li.image img {
+          -webkit-transform: translateY(-20px);
+          -ms-transform: translateY(-20px);
+          transform: translateY(-20px);
+          max-width: 100%; }
+    .upgrade--wrap .columns--three .header {
+      font-weight: bold;
+      color: white;
+      text-align: left;
+      padding-bottom: 10px; }
+    .upgrade--wrap .columns--three .body {
+      opacity: 0.75;
+      text-align: left;
+      padding-right: 20px; }
