--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,4 +34,6 @@ pre, code, .hljs{
 }
 
 // All styles for cards in any tutorial index
-  @import "layout/layout.grid";
+@import "layout/layout.grid";
+
+@import "layout/layout.upgrade-cta";
